--- a/index.html
+++ b/index.html
@@ -607,9 +607,9 @@
                                 <div class="block__content block__content--flex">
                                     <div class="block__content-titles">
                                         <h4 class="block__content-title" data-aos="fade-up" data-aos-easing="linear"
-                                            data-aos-duration="1500">Code the Extraordinary, Achieve the</h4>
+                                            data-aos-duration="1500" data-aos-offset="-450">Code the Extraordinary, Achieve the</h4>
                                         <h4 class="block__content-subtitle" data-aos="fade-down" data-aos-easing="linear"
-                                            data-aos-duration="1500">Impossible</h4>
+                                            data-aos-duration="1500" data-aos-offset="-450">Impossible</h4>
                                     </div>
                                     <div class="owl-carousel" style="max-width: 1147px;">
                                         <div class="tech-block__list-item">
