add last result

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="../marrix-power-1/assets/styles/slider.css">
+    <link rel="stylesheet" href="../marrix-power-1/assets/styles/cursor.css">
     <link rel="stylesheet" href="../marrix-power-1/assets/styles/style.css">
 
 </head>
@@ -173,6 +174,65 @@
                             </div>
                         </div>
                     </div>
+                    <div class="screen__innovate-content">
+                        <div class="screen__innovate-content-left">
+                            <div class="innovate-content__item">
+                                <div class="innovate-content__item-wrapper " data-aos="fade-right"
+                                    data-aos-duration="1000" data-aos-delay="300">
+                                    <div class="innovate-content__item-img">
+                                        10+
+                                    </div>
+                                    <div class="innovate-content__item-text">
+                                        years of proven commercial experience
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="innovate-content__item">
+                                <div class="innovate-content__item-wrapper " data-aos="fade-left"
+                                    data-aos-duration="1000" data-aos-delay="300">
+                                    <div class="innovate-content__item-img">
+                                        200+
+                                    </div>
+                                    <div class="innovate-content__item-text">
+                                        projects outsourced and distributed
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="screen__innovate-content-center">
+                            <div class="innovate-content__item-wrapper" data-aos="fade-up" data-aos-duration="1000"
+                                data-aos-delay="300">
+                                <div class="innovate-content__item-text">
+                                    <span>Where Ideas</span>
+                                    <span>Transform into Reality</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="screen__innovate-content-right">
+                            <div class="innovate-content__item">
+                                <div class="innovate-content__item-wrapper" data-aos="fade-right"
+                                    data-aos-duration="1000" data-aos-delay="300">
+                                    <div class="innovate-content__item-img">
+                                        100+
+                                    </div>
+                                    <div class="innovate-content__item-text">
+                                        satisfied clients
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="innovate-content__item">
+                                <div class="innovate-content__item-wrapper" data-aos="fade-left"
+                                    data-aos-duration="1000" data-aos-delay="300">
+                                    <div class="innovate-content__item-img">
+                                        50+
+                                    </div>
+                                    <div class="innovate-content__item-text">
+                                        full-time experts across the board
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div> <!--container-->
         </section> <!--screen screen--black-->
@@ -272,7 +332,7 @@
                                     <div class="innovate-content__item-wrapper " data-aos="fade-right"
                                         data-aos-duration="1000" data-aos-delay="300">
                                         <div class="innovate-content__item-img">
-                                            <img src="assets/image/innovate/10+.svg " alt="">
+                                            10+
                                         </div>
                                         <div class="innovate-content__item-text">
                                             years of proven commercial experience
@@ -283,7 +343,7 @@
                                     <div class="innovate-content__item-wrapper " data-aos="fade-left"
                                         data-aos-duration="1000" data-aos-delay="300">
                                         <div class="innovate-content__item-img">
-                                            <img src="assets/image/innovate/200+.svg " alt="">
+                                            200+
                                         </div>
                                         <div class="innovate-content__item-text">
                                             projects outsourced and distributed
@@ -305,7 +365,7 @@
                                     <div class="innovate-content__item-wrapper" data-aos="fade-right"
                                         data-aos-duration="1000" data-aos-delay="300">
                                         <div class="innovate-content__item-img">
-                                            <img src="assets/image/innovate/100+.svg " alt="">
+                                            100+
                                         </div>
                                         <div class="innovate-content__item-text">
                                             satisfied clients
@@ -316,7 +376,7 @@
                                     <div class="innovate-content__item-wrapper" data-aos="fade-left"
                                         data-aos-duration="1000" data-aos-delay="300">
                                         <div class="innovate-content__item-img">
-                                            <img src="assets/image/innovate/50+.svg " alt="">
+                                            50+
                                         </div>
                                         <div class="innovate-content__item-text">
                                             full-time experts across the board
@@ -579,17 +639,17 @@
                                             <li class="cascade-slider_dot"></li>
                                         </ol>
 
-                                        <span class="cascade-slider_arrow cascade-slider_arrow-left" data-action="prev">
+                                        <button class="cascade-slider_arrow cascade-slider_arrow-left" data-action="prev">
                                             <svg width="19" height="18" viewBox="0 0 19 18" fill="none" xmlns="http://www.w3.org/2000/svg">
                                             <path fill-rule="evenodd" clip-rule="evenodd" d="M6.12155 7.49999H19.0002V10.5H6.12155L11.0609 15.4393L8.93957 17.5606L0.378906 8.99999L8.93957 0.439331L11.0609 2.56065L6.12155 7.49999Z" fill="#121212"/>
                                             </svg>
-                                        </span>
-                                        <span class="cascade-slider_arrow cascade-slider_arrow-right"
+                                        </button>
+                                        <button class="cascade-slider_arrow cascade-slider_arrow-right"
                                             data-action="next">
                                                 <svg width="20" height="18" viewBox="0 0 20 18" fill="none" xmlns="http://www.w3.org/2000/svg">
                                                     <path fill-rule="evenodd" clip-rule="evenodd" d="M13.4775 10.557H0.923828V7.443H13.4775L8.66282 2.31595L10.7306 0.114014L19.0752 9L10.7306 17.886L8.66282 15.6841L13.4775 10.557Z" fill="#121212"/>
                                                 </svg>
-                                            </span>
+                                            </button>
                                     </div>
                                 </div>
                             </div>
@@ -607,9 +667,9 @@
                                 <div class="block__content block__content--flex">
                                     <div class="block__content-titles">
                                         <h4 class="block__content-title" data-aos="fade-up" data-aos-easing="linear"
-                                            data-aos-duration="1500" data-aos-offset="-450">Code the Extraordinary, Achieve the</h4>
+                                            data-aos-duration="1500">Code the Extraordinary, Achieve the</h4>
                                         <h4 class="block__content-subtitle" data-aos="fade-down" data-aos-easing="linear"
-                                            data-aos-duration="1500" data-aos-offset="-450">Impossible</h4>
+                                            data-aos-duration="1500">Impossible</h4>
                                     </div>
                                     <div class="owl-carousel" style="max-width: 1147px;">
                                         <div class="tech-block__list-item">
@@ -665,7 +725,59 @@
                                     </div>
 
                                 </div>
-
+                                <ul class="block__content--mobile">
+                                    <li>
+                                        <img src="assets/image/mobile-tech/Group 104.svg" >
+                                    </li>
+                                    <li>
+                                        <img src="assets/image/mobile-tech/Group 105.svg" >
+                                    </li>
+                                    <li>
+                                        <img src="assets/image/mobile-tech/Group 106.svg" >
+                                    </li>
+                                    <li>
+                                        <img src="assets/image/mobile-tech/Group 107.svg" >
+                                    </li>
+                                    <li>
+                                        <img src="assets/image/mobile-tech/Group 108.svg" >
+                                    </li>
+                                    <li>
+                                        <img src="assets/image/mobile-tech/Group 109.svg" >
+                                    </li>
+                                    <li>
+                                        <img src="assets/image/mobile-tech/Clip path group.svg" >
+                                    </li>
+                                    <li>
+                                        <img src="assets/image/mobile-tech/Group 110.svg" >
+                                    </li>
+                                    <li>
+                                        <img src="assets/image/mobile-tech/Group 115.svg" >
+                                    </li>
+                                    <li>
+                                        <img src="assets/image/mobile-tech/Group 116.svg" >
+                                    </li>
+                                    <li>
+                                        <img src="assets/image/mobile-tech/Group 117.svg" >
+                                    </li>
+                                    <li>
+                                        <img src="assets/image/mobile-tech/Group 118.svg" >
+                                    </li>
+                                    <li>
+                                        <img src="assets/image/mobile-tech/Group 119.svg" >
+                                    </li>
+                                    <li>
+                                        <img src="assets/image/mobile-tech/Group 120.svg" >
+                                    </li>
+                                    <li>
+                                        <img src="assets/image/mobile-tech/Group 121.svg" >
+                                    </li>
+                                    <li>
+                                        <img src="assets/image/mobile-tech/Group 122.svg" >
+                                    </li>
+                                    <li>
+                                        <img src="assets/image/mobile-tech/Group 123.svg" >
+                                    </li>
+                                </ul>
                             </div>
                         </div>
                     </div> <!--container-->
@@ -683,7 +795,7 @@
                                     <div class="grid grid--advantages">
                                         <div class="item advantages__item">
                                             <div class="advantages__item-number" data-aos="fade-right" data-aos-offset="-350"
-                                                data-aos-delay="500" data-aos-easing="ease-in-sine">
+                                                data-aos-delay="0" data-aos-easing="ease-in-sine">
                                                 01
                                             </div>
                                             <div class="advantages__item-content">
@@ -702,7 +814,7 @@
                                         </div>
                                         <div class="item advantages__item">
                                             <div class="advantages__item-number" data-aos="fade-right" data-aos-offset="-350"
-                                                data-aos-delay="1000" data-aos-easing="ease-in-sine">
+                                                data-aos-delay="100" data-aos-easing="ease-in-sine">
                                                 02
                                             </div>
                                             <div class="advantages__item-content">
@@ -719,7 +831,7 @@
                                         </div>
                                         <div class="item advantages__item">
                                             <div class="advantages__item-number" data-aos="fade-right" data-aos-offset="-650"
-                                                data-aos-delay="1500" data-aos-easing="ease-in-sine">
+                                                data-aos-delay="200" data-aos-easing="ease-in-sine">
                                                 03
                                             </div>
                                             <div class="advantages__item-content">
@@ -736,7 +848,7 @@
                                         </div>
                                         <div class="item advantages__item">
                                             <div class="advantages__item-number" data-aos="fade-right" data-aos-offset="-650"
-                                                data-aos-delay="2000" data-aos-easing="ease-in-sine">
+                                                data-aos-delay="300" data-aos-easing="ease-in-sine">
                                                 04
                                             </div>
                                             <div class="advantages__item-content">
@@ -956,12 +1068,20 @@
             </footer>
         </div>
     </div>
+    <div class="cursor-wrapper">
+        <div class='cursor' id="cursor"></div>
+        <div class='cursor2' id="cursor2">
+        <div class="ball"></div>
+        </div>
+        <div class='cursor3' id="cursor3"></div>
+    </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="../marrix-power-1/assets/js/slider.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/snap.svg/0.5.1/snap.svg-min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
+    <script src="../marrix-power-1/assets/js/cursor.js"></script>
     <script src="../marrix-power-1/assets/js/main.js"></script>
 </body>
 
