add fix for glitch

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="../marrix-power-1/assets/styles/slider.css">
     <link rel="stylesheet" href="../marrix-power-1/assets/styles/cursor.css">
+    <link rel="stylesheet" href="../marrix-power-1/assets/styles/glitch.css">
     <link rel="stylesheet" href="../marrix-power-1/assets/styles/style.css">
 
 </head>
@@ -131,6 +132,11 @@
                                     </defs>
                                     </svg>
 
+                            </div>
+                            <div class="glitch-block">
+                                <div id="glitch1"></div>
+                                <div id="glitch2"></div>
+                                <div id="glitch3"></div>
                             </div>
                         </div>
                     </div>
@@ -1082,6 +1088,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/snap.svg/0.5.1/snap.svg-min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
     <script src="../marrix-power-1/assets/js/cursor.js"></script>
+    <script src="../marrix-power-1/assets/js/glitch.js"></script>
     <script src="../marrix-power-1/assets/js/main.js"></script>
 </body>
 
