--- a/index.html
+++ b/index.html
@@ -61,11 +61,15 @@
                                     </div>
                                 </div>
                                 <button class="burger">
-                                    <div class="burger__line burger__line--firth">
+                                    <div class="burger__line burger__line--firth"
+
+                                    >
                                         <span class="burger__line-inner"></span>
                                         <span class="burger__line-inner"></span>
                                     </div>
-                                    <div class="burger__line burger__line--second">
+                                    <div class="burger__line burger__line--second"
+                                        
+                                    >
                                         <span class="burger__line-inner "></span>
                                         <span class="burger__line-inner "></span>
                                     </div>
@@ -966,21 +970,33 @@
                                         <div class="block-content-info-top">
                                             <ul class="block-content-info-buttons">
                                                 <li class="block-content-info-button">
-                                                    <button type="button">
+                                                    <button type="button"
+                                                    data-aos="fade-right"
+                                                    data-aos-offset="-450"
+                                                    data-aos-duration="1000"
+                                                    >
                                                         Get special access
                                                     </button>
 
                                                     <span class="block-content-info-button-line"></span>
                                                 </li>
                                                 <li class="block-content-info-button">
-                                                    <button type="button">
+                                                    <button type="button"
+                                                    data-aos="fade-right"
+                                                    data-aos-offset="-450"
+                                                    data-aos-duration="1000"
+                                                    >
                                                         SEND A REQUEST
                                                     </button>
 
                                                     <span class="block-content-info-button-line"></span>
                                                 </li>
                                                 <li class="block-content-info-button">
-                                                    <button type="button">
+                                                    <button type="button"
+                                                    data-aos="fade-right"
+                                                    data-aos-offset="-450"
+                                                    data-aos-duration="1000"
+                                                    >
                                                         SEE presentation
                                                     </button>
 
@@ -1396,7 +1412,8 @@
                                         <div class="rolling-block">
                                             <div class="rolling-block__content rolling-block__content_normal">
                                                 <div class="block-content-info-button">
-                                                    <button type="button">
+                                                    <button type="button"
+                                                    >
                                                         SEND A REQUEST
                                                     </button>
 
