--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@
                         <div class="menu">
                             <div class="menu__content">
                                 <div class="menu__block-btn">
-                                    <div class="menu__block-btn-embet">
+                                    <div class="menu__block-btn-embet burger--popup">
                                         <button class="menu__btn" type="button">MENU</button>
                                         <button class="menu__btn" type="button">MENU</button>
                                     </div>
                                 </div>
-                                <button class="burger">
+                                <button class="burger burger--popup">
                                     <div class="burger__line burger__line--firth"
 
                                     >
@@ -68,7 +68,7 @@
                                         <span class="burger__line-inner"></span>
                                     </div>
                                     <div class="burger__line burger__line--second"
-                                        
+
                                     >
                                         <span class="burger__line-inner "></span>
                                         <span class="burger__line-inner "></span>
@@ -147,16 +147,13 @@
                     <div class="screen__wrapper-footer">
                         <div class="screen__wrapper-footer-block screen__wrapper-footer-block--left">
                             <h4 class="screen__wrapper-footer-title">
-                                <span data-aos="fade-down" data-aos-duration="1000"
-                                data-aos-offset="-150"
+                                <span
                                 >WEB</span>
-                                <span data-aos="fade-down" data-aos-duration="1500"
-                                data-aos-offset="-150"
+                                <span
                                 >PRODUCT</span>
                             </h4>
                             <h4 class="screen__wrapper-footer-title">
-                                <span data-aos="fade-down" data-aos-duration="2000"
-                                data-aos-offset="-1150"
+                                <span
                                 >
                                     MARRIX POWER
                                 </span>
@@ -187,8 +184,7 @@
                     <div class="screen__innovate-content">
                         <div class="screen__innovate-content-left">
                             <div class="innovate-content__item">
-                                <div class="innovate-content__item-wrapper " data-aos="fade-right"
-                                    data-aos-duration="1000" data-aos-delay="300">
+                                <div class="innovate-content__item-wrapper ">
                                     <div class="innovate-content__item-img">
                                         10+
                                     </div>
@@ -198,8 +194,7 @@
                                 </div>
                             </div>
                             <div class="innovate-content__item">
-                                <div class="innovate-content__item-wrapper " data-aos="fade-left"
-                                    data-aos-duration="1000" data-aos-delay="300">
+                                <div class="innovate-content__item-wrapper ">
                                     <div class="innovate-content__item-img">
                                         200+
                                     </div>
@@ -210,8 +205,7 @@
                             </div>
                         </div>
                         <div class="screen__innovate-content-center">
-                            <div class="innovate-content__item-wrapper" data-aos="fade-up" data-aos-duration="1000"
-                                data-aos-delay="300">
+                            <div class="innovate-content__item-wrapper" >
                                 <div class="innovate-content__item-text">
                                     <span>Where Ideas</span>
                                     <span>Transform into Reality</span>
@@ -220,8 +214,7 @@
                         </div>
                         <div class="screen__innovate-content-right">
                             <div class="innovate-content__item">
-                                <div class="innovate-content__item-wrapper" data-aos="fade-right"
-                                    data-aos-duration="1000" data-aos-delay="300">
+                                <div class="innovate-content__item-wrapper">
                                     <div class="innovate-content__item-img">
                                         100+
                                     </div>
@@ -231,8 +224,7 @@
                                 </div>
                             </div>
                             <div class="innovate-content__item">
-                                <div class="innovate-content__item-wrapper" data-aos="fade-left"
-                                    data-aos-duration="1000" data-aos-delay="300">
+                                <div class="innovate-content__item-wrapper">
                                     <div class="innovate-content__item-img">
                                         50+
                                     </div>
@@ -267,12 +259,12 @@
                         <div class="menu">
                             <div class="menu__content">
                                 <div class="menu__block-btn">
-                                    <div class="menu__block-btn-embet">
+                                    <div class="menu__block-btn-embet burger--popup">
                                         <button class="menu__btn" type="button">MENU</button>
                                         <button class="menu__btn" type="button">MENU</button>
                                     </div>
                                 </div>
-                                <button class="burger">
+                                <button class="burger burger--popup">
                                     <div class="burger__line burger__line--firth">
                                         <span class="burger__line-inner"></span>
                                         <span class="burger__line-inner"></span>
@@ -339,8 +331,7 @@
                         <div class="screen__innovate-content">
                             <div class="screen__innovate-content-left">
                                 <div class="innovate-content__item">
-                                    <div class="innovate-content__item-wrapper " data-aos="fade-right"
-                                        data-aos-duration="1000" data-aos-delay="300">
+                                    <div class="innovate-content__item-wrapper " >
                                         <div class="innovate-content__item-img">
                                             10+
                                         </div>
@@ -350,8 +341,7 @@
                                     </div>
                                 </div>
                                 <div class="innovate-content__item">
-                                    <div class="innovate-content__item-wrapper " data-aos="fade-left"
-                                        data-aos-duration="1000" data-aos-delay="300">
+                                    <div class="innovate-content__item-wrapper " >
                                         <div class="innovate-content__item-img">
                                             200+
                                         </div>
@@ -362,8 +352,7 @@
                                 </div>
                             </div>
                             <div class="screen__innovate-content-center">
-                                <div class="innovate-content__item-wrapper" data-aos="fade-up" data-aos-duration="1000"
-                                    data-aos-delay="300">
+                                <div class="innovate-content__item-wrapper" >
                                     <div class="innovate-content__item-text">
                                         <span>Where Ideas</span>
                                         <span>Transform into Reality</span>
@@ -372,8 +361,7 @@
                             </div>
                             <div class="screen__innovate-content-right">
                                 <div class="innovate-content__item">
-                                    <div class="innovate-content__item-wrapper" data-aos="fade-right"
-                                        data-aos-duration="1000" data-aos-delay="300">
+                                    <div class="innovate-content__item-wrapper">
                                         <div class="innovate-content__item-img">
                                             100+
                                         </div>
@@ -383,8 +371,7 @@
                                     </div>
                                 </div>
                                 <div class="innovate-content__item">
-                                    <div class="innovate-content__item-wrapper" data-aos="fade-left"
-                                        data-aos-duration="1000" data-aos-delay="300">
+                                    <div class="innovate-content__item-wrapper">
                                         <div class="innovate-content__item-img">
                                             50+
                                         </div>
@@ -399,17 +386,14 @@
                     <div class="screen__wrapper-footer">
                         <div class="screen__wrapper-footer-block screen__wrapper-footer-block--left">
                             <h4 class="screen__wrapper-footer-title">
-                                <span data-aos="fade-down" data-aos-duration="1000"
-                                data-aos-offset="-150"
+                                <span
 
                                 >WEB</span>
-                                <span data-aos="fade-down" data-aos-duration="1500"
-                                data-aos-offset="-150"
+                                <span
                                 >PRODUCT</span>
                             </h4>
                             <h4 class="screen__wrapper-footer-title">
-                                <span data-aos="fade-down" data-aos-duration="2000"
-                                data-aos-offset="-150"
+                                <span
                                 >
                                     MARRIX POWER
                                 </span>
@@ -469,12 +453,12 @@
                         <div class="menu">
                             <div class="menu__content">
                                 <div class="menu__block-btn">
-                                    <div class="menu__block-btn-embet">
+                                    <div class="menu__block-btn-embet burger--popup">
                                         <button class="menu__btn" type="button">MENU</button>
                                         <button class="menu__btn" type="button">MENU</button>
                                     </div>
                                 </div>
-                                <button class="burger">
+                                <button class="burger burger--popup">
                                     <div class="burger__line burger__line--firth">
                                         <span class="burger__line-inner"></span>
                                         <span class="burger__line-inner"></span>
@@ -648,10 +632,10 @@
                                         </div>
 
                                         <ol class="cascade-slider_nav ">
+                                            <li class="cascade-slider_dot"></li>
+                                            <li class="cascade-slider_dot "></li>
+                                            <li class="cascade-slider_dot"></li>
                                             <li class="cascade-slider_dot cur"></li>
-                                            <li class="cascade-slider_dot"></li>
-                                            <li class="cascade-slider_dot"></li>
-                                            <li class="cascade-slider_dot"></li>
                                         </ol>
 
                                         <button class="cascade-slider_arrow cascade-slider_arrow-left" data-action="prev">
@@ -969,38 +953,41 @@
                                     <div class="block-content-info">
                                         <div class="block-content-info-top">
                                             <ul class="block-content-info-buttons">
-                                                <li class="block-content-info-button">
+                                                <li class="block-content-info-button open-form">
                                                     <button type="button"
                                                     data-aos="fade-right"
-                                                    data-aos-offset="-450"
+                                                    data-aos-offset="-750"
                                                     data-aos-duration="1000"
                                                     >
                                                         Get special access
                                                     </button>
 
                                                     <span class="block-content-info-button-line"></span>
+                                                    <span class="block-content-info-button-line-mob"></span>
                                                 </li>
-                                                <li class="block-content-info-button">
+                                                <li class="block-content-info-button open-form">
                                                     <button type="button"
                                                     data-aos="fade-right"
-                                                    data-aos-offset="-450"
+                                                    data-aos-offset="-750"
                                                     data-aos-duration="1000"
                                                     >
                                                         SEND A REQUEST
                                                     </button>
 
                                                     <span class="block-content-info-button-line"></span>
+                                                    <span class="block-content-info-button-line-mob"></span>
                                                 </li>
                                                 <li class="block-content-info-button">
                                                     <button type="button"
                                                     data-aos="fade-right"
-                                                    data-aos-offset="-450"
+                                                    data-aos-offset="-750"
                                                     data-aos-duration="1000"
                                                     >
                                                         SEE presentation
                                                     </button>
 
                                                     <span class="block-content-info-button-line"></span>
+
                                                 </li>
                                             </ul>
                                         </div> <!--block-content-info-bottom-->
@@ -1066,14 +1053,28 @@
             <footer class="footer">
                 <div class="container">
                     <div class="footer__wrapper-footer">
-                        <div class="footer__wrapper-footer-block" data-aos="fade-right" data-aos-easing="linear"
-                            data-aos-duration="800">
-                            <h4 class="footer__wrapper-footer-title">
-                                WEB PRODUCT
-                            </h4>
-                            <h4 class="footer__wrapper-footer-title">
-                                MARRIX POWER
-                            </h4>
+                        <div class="footer__wrapper-footer-block"
+                            >
+                            <div>
+                                <h4 class="footer__wrapper-footer-title">
+                                    WEB PRODUCT
+                                </h4>
+                                <h4 class="footer__wrapper-footer-title">
+                                    MARRIX POWER
+                                </h4>
+                            </div>
+                            <div class="rolling-title-footer">
+                                <h3 class="">
+                                    <span>All you</span>
+                                    <span>need is</span>
+                                </h3>
+                                <h3 class="">
+                                    <span>
+                                        M
+                                    </span>
+
+                                </h3>
+                            </div>
                         </div>
                         <div class="footer__wrapper-footer-block footer__wrapper-footer-block-empty"></div>
                         <div class="footer__wrapper-footer-block footerfooter__wrapper-footer-block--contacts"></div>
@@ -1114,7 +1115,7 @@
                     <div class="menu">
                         <div class="menu__content">
                             <div class="menu__block-btn">
-                                <div class="menu__block-btn-embet">
+                                <div class="menu__block-btn-embet burger--popup">
                                     <button class="menu__btn" type="button">MENU</button>
                                     <button class="menu__btn" type="button">MENU</button>
                                 </div>
@@ -1418,9 +1419,10 @@
                                                     </button>
 
                                                     <span class="block-content-info-button-line"></span>
+                                                    <span class="block-content-info-button-line-mob"></span>
                                                 </div>
                                             </div>
-                                            <div class="rolling-block__content rolling-block__content_active">Надіслано</div>
+
                                         </div>
                                     </div>
                                 </div>
