--- a/index.html
+++ b/index.html
@@ -1224,8 +1224,7 @@
                                     </defs>
                                 </svg></div>
                                 <div class="menu-popup__content-icon"><svg xmlns="http://www.w3.org/2000/svg" width="864" height="299" viewBox="0 0 864 299" fill="none">
-                                    <path opacity="0.6" fill-rule="evenodd" clip-rule="evenodd" d="M763 210.54C748.122 210.207 733.568 201.66 733.568 184.9V43.6001H679.268V184.9C679.119 234.389 720.892 259.288 763 259.597V210.54Z" fill="url(#paint0_linear_1466_10017)"/>
-                                    <path xmlns="http://www.w3.org/2000/svg" opacity="0.6" fill-rule="evenodd" clip-rule="evenodd" d="M762 259.585C804.962 260.298 848.616 235.403 848.768 184.9V43.6001H794.468V184.9C794.312 202.716 777.792 211.251 762 210.505V259.585Z" fill="url(#paint0_linear_1466_10017)"/>
+                                    <path opacity="0.6" xmlns="http://www.w3.org/2000/svg" d="M733.568 43.6V184.9C733.568 219.1 794.168 219.1 794.468 184.9V43.6H848.768V184.9C848.468 284.5 678.968 284.5 679.268 184.9V43.6H733.568Z" fill="url(#paint0_linear_1466_10017)"/>
                                     <defs>
                                     <linearGradient id="paint0_linear_1466_10017" x1="375" y1="363.5" x2="374.5" y2="-48.5" gradientUnits="userSpaceOnUse">
                                     <stop stop-color="#2400FF" stop-opacity="0.15"/>
