--- a/index.html
+++ b/index.html
@@ -632,10 +632,10 @@
                                         </div>
 
                                         <ol class="cascade-slider_nav ">
-                                            <li class="cascade-slider_dot"></li>
                                             <li class="cascade-slider_dot "></li>
-                                            <li class="cascade-slider_dot"></li>
                                             <li class="cascade-slider_dot cur"></li>
+                                            <li class="cascade-slider_dot"></li>
+                                            <li class="cascade-slider_dot"></li>
                                         </ol>
 
                                         <button class="cascade-slider_arrow cascade-slider_arrow-left" data-action="prev">
@@ -663,14 +663,12 @@
                                     <div class="block-name__line"></div>
                                     <span class="block-name__title">our technologies</span>
                                 </div>
-                                <div class="block__content block__content--flex">
+                                <div class="block__content">
                                     <div class="block__content-titles">
-                                        <h4 class="block__content-title" data-aos="fade-up" data-aos-easing="linear"
-                                            data-aos-duration="1500">Code the Extraordinary, Achieve the</h4>
-                                        <h4 class="block__content-subtitle" data-aos="fade-down" data-aos-easing="linear"
-                                            data-aos-duration="1500">Impossible</h4>
+                                        <h4 class="block__content-title" >Code the Extraordinary, Achieve the</h4>
+                                        <h4 class="block__content-subtitle">Impossible</h4>
                                     </div>
-                                    <div class="owl-carousel" style="max-width: 1147px;">
+                                    <div class="block__content-tech">
                                         <div class="tech-block__list-item">
                                             <img src="assets/image/new_svg/Frame 16.svg" alt="icon">
                                         </div>
@@ -695,34 +693,32 @@
                                         <div class="tech-block__list-item">
                                             <img src="assets/image/new_svg/Frame 24.svg" alt="icon">
                                         </div>
-                                    </div>
-                                </div>
-                                <div class="owl-carousel">
-                                    <div class="tech-block__list-item">
-                                        <img src="assets/image/new_svg/Frame 25.svg" alt="icon">
-                                    </div>
-                                    <div class="tech-block__list-item">
-                                        <img src="assets/image/new_svg/Frame 26.svg" alt="icon">
-                                    </div>
-                                    <div class="tech-block__list-item">
-                                        <img src="assets/image/new_svg/Frame 27.svg" alt="icon">
-                                    </div>
-                                    <div class="tech-block__list-item">
-                                        <img src="assets/image/new_svg/Frame 28.svg" alt="icon">
-                                    </div>
-                                    <div class="tech-block__list-item">
-                                        <img src="assets/image/new_svg/Frame 29.svg" alt="icon">
-                                    </div>
-                                    <div class="tech-block__list-item">
-                                        <img src="assets/image/new_svg/Frame 30.svg" alt="icon">
-                                    </div>
-                                    <div class="tech-block__list-item">
-                                        <img src="assets/image/new_svg/Frame 31.svg" alt="icon">
-                                    </div>
-                                    <div class="tech-block__list-item">
-                                        <img src="assets/image/new_svg/Frame 32.svg" alt="icon">
-                                    </div>
+                                        <div class="tech-block__list-item">
+                                            <img src="assets/image/new_svg/Frame 25.svg" alt="icon">
+                                        </div>
+                                        <div class="tech-block__list-item">
+                                            <img src="assets/image/new_svg/Frame 26.svg" alt="icon">
+                                        </div>
+                                        <div class="tech-block__list-item">
+                                            <img src="assets/image/new_svg/Frame 27.svg" alt="icon">
+                                        </div>
+                                        <div class="tech-block__list-item">
+                                            <img src="assets/image/new_svg/Frame 28.svg" alt="icon">
+                                        </div>
+                                        <div class="tech-block__list-item">
+                                            <img src="assets/image/new_svg/Frame 29.svg" alt="icon">
+                                        </div>
+                                        <div class="tech-block__list-item">
+                                            <img src="assets/image/new_svg/Frame 30.svg" alt="icon">
+                                        </div>
+                                        <div class="tech-block__list-item">
+                                            <img src="assets/image/new_svg/Frame 31.svg" alt="icon">
+                                        </div>
+                                        <div class="tech-block__list-item">
+                                            <img src="assets/image/new_svg/Frame 32.svg" alt="icon">
+                                        </div>
 
+                                    </div>
                                 </div>
                                 <ul class="block__content--mobile">
                                     <li>
@@ -944,8 +940,7 @@
                             <div class="screen__wrapper-body">
 
                                 <div class="block-content block-content--contacts">
-                                    <h4 class="block-content--title" data-aos="fade-up" data-aos-duration="2000"
-                                    data-aos-offset="-350"
+                                    <h4 class="block-content--title"
                                     >
                                         We want to hear you
                                     </h4>
@@ -955,9 +950,7 @@
                                             <ul class="block-content-info-buttons">
                                                 <li class="block-content-info-button open-form">
                                                     <button type="button"
-                                                    data-aos="fade-right"
-                                                    data-aos-offset="-750"
-                                                    data-aos-duration="1000"
+
                                                     >
                                                         Get special access
                                                     </button>
@@ -967,9 +960,7 @@
                                                 </li>
                                                 <li class="block-content-info-button open-form">
                                                     <button type="button"
-                                                    data-aos="fade-right"
-                                                    data-aos-offset="-750"
-                                                    data-aos-duration="1000"
+
                                                     >
                                                         SEND A REQUEST
                                                     </button>
@@ -978,13 +969,10 @@
                                                     <span class="block-content-info-button-line-mob"></span>
                                                 </li>
                                                 <li class="block-content-info-button">
-                                                    <button type="button"
-                                                    data-aos="fade-right"
-                                                    data-aos-offset="-750"
-                                                    data-aos-duration="1000"
-                                                    >
+
+                                                    <a  href="./assets/image/Vector.png"  download="Vector.png">
                                                         SEE presentation
-                                                    </button>
+                                                    </a>
 
                                                     <span class="block-content-info-button-line"></span>
 
@@ -1026,9 +1014,8 @@
                                                 </div>
                                             </div>
                                             <div class="block-content-info-bottom__partner">
-                                                <ul class="block-content-info-right-clients" data-aos="fade-up"
-                                                    data-aos-duration="2000"
-                                                    data-aos-offset="-650"
+                                                <ul class="block-content-info-right-clients"
+
                                                     >
                                                     <li>
                                                         <img src="assets/image/partner.png" alt="partner">
@@ -1053,15 +1040,19 @@
             <footer class="footer">
                 <div class="container">
                     <div class="footer__wrapper-footer">
-                        <div class="footer__wrapper-footer-block"
+                        <div class="footer__wrapper-footer-block footer__wrapper-footer-block--left"
                             >
                             <div>
-                                <h4 class="footer__wrapper-footer-title">
-                                    WEB PRODUCT
-                                </h4>
-                                <h4 class="footer__wrapper-footer-title">
-                                    MARRIX POWER
-                                </h4>
+                                <div class="portfolio__item">
+                                    <div class="portfolio__item-embet">
+                                        <a class="portfolio__item-link" href="/">
+                                            Portfolio
+                                        </a>
+                                        <a class="portfolio__item-link" href="/">
+                                            Portfolio
+                                        </a>
+                                    </div>
+                                </div>
                             </div>
                             <div class="rolling-title-footer">
                                 <h3 class="">
@@ -1087,16 +1078,7 @@
                                 <span class="top__V1mjb"></span>
                                 <span class="bottom__22hfT"></span>
                             </button>
-                            <div class="portfolio__item">
-                                <div class="portfolio__item-embet">
-                                    <a class="portfolio__item-link" href="/">
-                                        Portfolio
-                                    </a>
-                                    <a class="portfolio__item-link" href="/">
-                                        Portfolio
-                                    </a>
-                                </div>
-                            </div>
+
                         </div>
                     </div>
                 </div>
