add last result

--- a/about.html
+++ b/about.html
@@ -153,6 +153,11 @@
                                 <div class="block-content">
                                     <h3 class="block-content__title">All started with a big dream and a small team of developers</h3>
                                     <div class="block-content__bg-element">
+                                        <div class="glitch-block">
+                                            <div id="glitch9"></div>
+                                            <div id="glitch10"></div>
+                                            <div id="glitch11"></div>
+                                        </div>
                                         <img src="./assets/image/2014.svg" alt="2014">
                                     </div>
                                     <div class="block-content__text">
